CMDB configured